# django-snacks

./: README.md  pyproject.toml
snacks_project/: db.sqlite3
snacks_project/snacks/: tests.py  urls.py  views.py
snacks_project/snacks_project/: settings.py  urls.py
snacks_project/templates/: aboutus.html  base.html  home.html
