[tool.poetry]
name = "django-snacks"
version = "0.1.0"
description = ""
authors = ["majedalswaeer <majedalswaeer69@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.10b0"
flake8 = "^4.0.1"
Django = "^3.2.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
